Adding missing Jinja template.

--- a/ansible/roles/image-builder-content-sources/tasks/add-additional-sources.yaml
+++ b/ansible/roles/image-builder-content-sources/tasks/add-additional-sources.yaml
@@ -15,7 +15,7 @@
         group: root
         mode: "0644"
         owner: root
-        src: template.j2
+        src: content-source.j2
       loop: "{{ sources_list[0] }}"
       loop_control:
         loop_var: content_source
