--- a/charts/rfe-pipelines/templates/rfe-oci-iso-pipeline.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-iso-pipeline.yaml
@@ -43,6 +43,14 @@ spec:
       description: Name of the Blueprint to use for the ISO Build (Should not be Customized)
       default: "rfe-iso-blueprint"
       type: string
+    - name: additional-content-sources
+      description: JSON object with list of Additional Image Builder sources
+      default: {{ $.Values.pipelines.additional_content_sources | toJson | b64enc }}
+      type: string
+    - name: rhsm-repositories
+      description: JSON object with list of RHEL Repos
+      default: {{ $.Values.pipelines.rhsm_repositories | toJson | b64enc }}
+      type: string
   results:
     - name: build-commit-id
       description: Commit ID of the Build
@@ -95,6 +103,10 @@ spec:
           value: $(params.image-builder-secret)
         - name: iso-blueprint
           value: /workspace/workspace/blueprints/$(params.iso-blueprint)
+        - name: additional-content-sources
+          value: $(params.additional-content-sources)
+        - name: rhsm-repositories
+          value: $(params.rhsm-repositories)
       runAfter:
         - "git-clone-tooling"
         - "git-clone-blueprints"
