Adding missing tasks field.

--- a/ansible/playbooks/oci-build-auto-iso.yaml
+++ b/ansible/playbooks/oci-build-auto-iso.yaml
@@ -19,6 +19,7 @@
 - name: Generate RFE Boot ISO w/ Embedded kickstart
   become: yes
   hosts: pipeline_target_host
+  tasks:
     - name: Build Installer ISO
       ansible.builtin.include_role:
         name: oci-build-auto-iso
