Limiting debug task to run_once/localhost.

--- a/ansible/roles/pipeline-scheduler/tasks/main.yaml
+++ b/ansible/roles/pipeline-scheduler/tasks/main.yaml
@@ -104,3 +104,5 @@
 - name: Debug pipeline_target_host
   ansible.builtin.debug:
     msg: "pipeline_target_host = {{ pipeline_target_host }}"
+  delegate_to: localhost
+  run_once: yes
