Implement Pool of Image Builder Hosts (#243)
* Adding support for N number of Image Builder VMs to support pooling.

* Updating volume names.

* Making volume names consistent.

* Templatizing root disk.

* Adding missing variable.

* Removing chomps.

* Using variable in wrong context.

* Updating QuayRegistry CR to include managed TLS component.

* Reorganizing components in QuayRegistry CR.

* Ignore whatever Quay Operator is doing wrong this time.

* Updating VM/VMI labels to support n number of image builder VMs.

* Updating role to support multiple instances of image builder.

* rfe-image-builders -> builders. Adding support for multiple image builders to playbook.

* Dropping sources task. Updating Image Builder chart to generate k8s service per VM.

* Fixing variable scope.

* Adding debug...

* Adjusting variable scope.

* instance_expected_count->image_builder_replicas. Updating Job to include extra var for image_builder_replicas.

* Moving from k8s_info wait_condition to explicit check.

* Initial scheduler role.

* Adding pipeline_target_host to inventory.

* Updating create image playbook to support scheduler.

* Updating image pipeline to use scheduler.

* Updating image-builder-host param for image pipeline.

* Updating installer image pipeline to use scheduler.

* Updating ISO build playbook to use scheduled host.

* Updating oci-build-auto-iso role to source ISO from proper pool member.

* pipeline_target_host->image_builder_host. Adding run_once to some tasks in scheduler role.

* +image-builder-content-sources role. Integrating with create-image pipeline.

* Reworking image-builder-content-sources role.

* Updating oci-image-pipeline to pass additional parameters to build-image task.

* Adjusting JSON parsing.

* Fixing empty additional_content_sources value.

* Revert JSON parse change.

* Adding missing Jinja template.

* Adding missing loop to task.

* Adding image-builder-

--- a/ansible/roles/oci-build-auto-iso/tasks/main.yaml
+++ b/ansible/roles/oci-build-auto-iso/tasks/main.yaml
@@ -160,7 +160,7 @@
 - name: Pull ISO From Image Builder to httpd Pod
   ansible.builtin.get_url:
     dest: "{{ edge_iso_path }}"
-    url: "http://{{ image_builder_service_name }}/{{ edge_iso_path | basename }}"
+    url: "http://{{ image_builder_host }}/{{ edge_iso_path | basename }}"
   become: no
   delegate_to: "{{ groups.httpd_pod_group[0] }}"
 
