--- a/ansible/playbooks/oci-build-installer-image.yaml
+++ b/ansible/playbooks/oci-build-installer-image.yaml
@@ -1,10 +1,23 @@
-- name: Generate In-Memory Inventory of Image Builder VM
+- name: Generate In-Memory Inventory of OpenShift VMs
+  gather_facts: no
   hosts: localhost
   roles:
     - role: openshift-image-builder-imi
 
+- name: Find Appropriate Image Builder Host
+  become: yes
+  hosts: builders
+  roles:
+    - role: pipeline-scheduler
+
 - name: Generate RFE Boot ISO Image
   become: yes
-  hosts: image-builder
-  roles:
-    - role: oci-build-installer-image
+  hosts: pipeline_target_host
+  tasks:
+    - name: Configure Content Sources
+      ansible.builtin.include_role:
+        name: image-builder-content-sources
+
+    - name: Build Installer Image
+      ansible.builtin.include_role:
+        name: oci-build-installer-image
