--- a/ansible/playbooks/oci-create-image.yaml
+++ b/ansible/playbooks/oci-create-image.yaml
@@ -3,13 +3,22 @@
   hosts: localhost
   roles:
     - role: openshift-image-builder-imi
-      tags: openshift-image-builder-imi
+
+- name: Find Appropriate Image Builder Host
+  become: yes
+  hosts: builders
+  roles:
+    - role: pipeline-scheduler
 
 - name: Create OCI Image
   become: yes
   gather_facts: no
-  hosts: image-builder
+  hosts: pipeline_target_host
   tasks:
+    - name: Configure Content Sources
+      ansible.builtin.include_role:
+        name: image-builder-content-sources
+
     - name: Build OCI Image
-      include_role:
+      ansible.builtin.include_role:
         name: oci-build-image
