--- a/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
+++ b/ansible/roles/openshift-image-builder-imi/tasks/main.yaml
@@ -5,24 +5,28 @@
     ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     host: https://kubernetes.default.svc
     kind: VirtualMachineInstance
+    label_selectors:
+      - app=image-builder
     namespace: rfe
-    name: image-builder
-    username: rfe-automation
     validate_certs: yes
+  delay: 10
   register: vmi_results
   retries: 60
-  delay: 10
   until:
-    - vmi_results.resources | default([]) | list | count == 1
-    - vmi_results.resources | default([]) | list | first | json_query("status.interfaces[0].ipAddress") | ipaddr
+    - vmi_results.resources | list | length == (image_builder_replicas | int)
+    - >
+      vmi_results.resources |
+        json_query('[*].status.conditions[?type==`Ready`].status') |
+        flatten |
+        select('match', 'True') |
+        list |
+        length == (image_builder_replicas | int)
 
-- name: Debug vmi_results
-  ansible.builtin.debug:
-    msg: "image-builder - {{ vmi_results.resources[0].status.interfaces[0].ipAddress }}"
-    verbosity: 1
-
-- name: Generate In-Memory Inventory of Image Builder VM
+- name: Generate In-Memory Inventory of Image Builder VM(s)
   ansible.builtin.add_host:
-    ansible_ssh_host: "{{ vmi_results.resources[0].status.interfaces[0].ipAddress }}"
+    ansible_ssh_host: "{{ item.status.interfaces[0].ipAddress }}"
     ansible_ssh_port: "22"
-    name: image-builder
+    groups:
+      - builders
+    name: "{{ item.metadata.name }}"
+  loop: "{{ vmi_results.resources }}"
