--- a/charts/image-builder-vm/templates/image-builder-vm-service.yaml
+++ b/charts/image-builder-vm/templates/image-builder-vm-service.yaml
@@ -1,10 +1,17 @@
+{{- $i := (.Values.imageBuilderVM.replicas | int) -}}
+{{- if not (ge $i 1) -}}
+{{- fail "imageBuilderVM.replicas must be greater than or equal to zero!" -}}
+{{- end -}}
+{{- range until $i -}}
+{{- $instance_name := printf "image-builder-%03d" . -}}
+---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    vm.kubevirt.io/name: image-builder
-    {{- include "common.labels.labels" . | nindent 4 }}    
-  name: image-builder
+    vm.kubevirt.io/name: {{ $instance_name }}
+    {{- include "common.labels.labels" $ | nindent 4 }}
+  name: {{ $instance_name }}
   namespace: rfe
 spec:
   ports:
@@ -16,7 +23,12 @@ spec:
     port: 80
     protocol: TCP
     targetPort: 80
+  - name: 443-tcp
+    port: 443
+    protocol: TCP
+    targetPort: 443
   selector:
-    vm.kubevirt.io/name: image-builder
+    vm.kubevirt.io/name: {{ $instance_name }}
   sessionAffinity: None
   type: ClusterIP
+{{ end }}
