--- a/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-image-task.yaml
@@ -18,9 +18,17 @@ spec:
       description: Name of the secret containing the SSH key for the image builder
       default: "image-builder-ssh-key"
       type: string
+    - name: additional-content-sources
+      description: JSON object with list of Additional Image Builder sources
+      type: string
+    - name: rhsm-repositories
+      description: JSON object with list of RHEL Repos
+      type: string
   results:
     - name: build-commit
       description: Commit ID of the Build
+    - name: image-builder-host
+      description: Image Builder Host used for Pipeline Run
   steps:
     - name: build-image-playbook
       image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
@@ -34,6 +42,9 @@ spec:
             --private-key=/var/secrets/image-builder-ssh/ssh-privatekey \
             -e blueprint_source_dir=$(params.blueprint-dir) \
             -e build_commit_output_file=$(results.build-commit.path) \
+            -e image_builder_host_output_file=$(results.image-builder-host.path) \
+            -e additional_content_sources=$(params.additional-content-sources) \
+            -e rhsm_repositories=$(params.rhsm-repositories) \
             playbooks/oci-create-image.yaml
       command:
         - /bin/bash
