--- a/charts/rfe-pipelines/templates/rfe-oci-build-installer-image-task.yaml
+++ b/charts/rfe-pipelines/templates/rfe-oci-build-installer-image-task.yaml
@@ -22,9 +22,17 @@ spec:
       description: Name of the Blueprint to use for the ISO Build (Should not be Customized)
       default: "rfe-iso-blueprint"
       type: string
+    - name: additional-content-sources
+      description: JSON object with list of Additional Image Builder sources
+      type: string
+    - name: rhsm-repositories
+      description: JSON object with list of RHEL Repos
+      type: string
   results:
     - name: build-commit-id
       description: Commit ID of the Build
+    - name: image-builder-host
+      description: Image Builder Host used for Pipeline Run
   steps:
     - name: build-installer-image-playbook
       image: image-registry.openshift-image-registry.svc:5000/rfe/ansible-rfe-runner:latest
@@ -39,6 +47,9 @@ spec:
             -e blueprint_source_dir=$(params.iso-blueprint) \
             -e ostree_repo_url=$(params.ostree-repo-url) \
             -e build_commit_id_output_file=$(results.build-commit-id.path) \
+            -e image_builder_host_output_file=$(results.image-builder-host.path) \
+            -e additional_content_sources=$(params.additional-content-sources) \
+            -e rhsm_repositories=$(params.rhsm-repositories) \
             playbooks/oci-build-installer-image.yaml
       command:
         - /bin/bash
