--- a/charts/pulp/values.yaml
+++ b/charts/pulp/values.yaml
@@ -61,3 +61,12 @@ commonCR:
   annotations:
     argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
     argocd.argoproj.io/compare-options: IgnoreExtraneous
+rfe:
+  namespace: rfe
+  publisherSecretName: publisher
+
+bootstrap:
+  image:
+    registry: image-registry.openshift-image-registry.svc:5000
+    repository: openshift/tools
+    version: latest
